--- a/packages/statemanager/package.json
+++ b/packages/statemanager/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "@pulsar/storemanager",
+  "name": "@vault/statemanager",
   "version": "1.0.0",
   "type": "module",
-  "description": "Store Management Library",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "State Management Library",
   "exports": {
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": ["dist"],
+  "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup src/index.ts --format esm --dts --clean",
-    "dev": "tsup src/index.ts --format esm --dts --watch"
+    "build": "tsdown --config tsdown.config.ts",
+    "dev": "tsdown --watch --config tsdown.config.ts",
+    "clean": "rimraf dist"
   },
   "keywords": [],
   "author": "Rohit Chauhan",
   "license": "ISC",
   "packageManager": "pnpm@10.15.0"
 }
-
